--- a/Business Coaching/coaching.css
+++ b/Business Coaching/coaching.css
@@ -2398,10 +2398,16 @@ textarea.w-input, textarea.w-select {
   opacity: 1;
 }
 
-.image-2 {
-  margin-top: 1px;
-  margin-left: 128px;
-}
+ .image-2 {
+    margin-top: 1px;
+    margin-left: 78px;
+  }
+  
+  
+  .image-22 {
+    margin-top: 1px;
+    margin-left: 20px;
+  }
 
 .project-button {
   opacity: .75;
@@ -2736,11 +2742,16 @@ textarea.w-input, textarea.w-select {
    .welcome-to-av-solutions-1{
     font-size: 7rem;
    }
-   .image-2{
-     
-     width: -7%;
-     margin-left: 5%;
-   }
+    .image-2{
+    
+    width: -7%;
+    margin-left: 5%;
+  }
+  .image-22{
+    
+    width: -7%;
+    
+  }
    .image-5{
     margin-top: -10%;
   }
@@ -2890,7 +2901,7 @@ textarea.w-input, textarea.w-select {
      margin-left: -5%;
    }
    .image-2{
-     margin-left: 4%;
+     margin-left: 8%;
    }
    .image-5{
     margin-top: -20%;
@@ -2930,7 +2941,7 @@ textarea.w-input, textarea.w-select {
      margin-left: -5%;
    }
    .image-2{
-     margin-left: 4%;
+     margin-left: 8%;
    }
    .image-5{
     margin-top: -20%;
@@ -2971,7 +2982,7 @@ textarea.w-input, textarea.w-select {
      margin-left: -7%;
    }
    .image-2{
-     margin-left: 5%;
+     margin-left: 6%;
    
    }
    .image-5{
@@ -3012,11 +3023,16 @@ textarea.w-input, textarea.w-select {
    .image{
      margin-left: -7%;
    }
-   .image-2{
-     margin-left: 7%;
-     width: 12vw;
-   
-   }
+    .image-2{
+    margin-left: 8%;
+    width: 4vw;
+  
+  }
+  .image-22{
+    margin-left: 1%;
+    width: 6vw;
+  
+  }
    .image-5{
     margin-top: -40%;
   }
@@ -3028,9 +3044,13 @@ textarea.w-input, textarea.w-select {
  @media screen and (max-width: 500px) {
 
    .image-2{
-     margin-left: 8%;
-     width: 10vw;
-   }
+    margin-left: 10%;
+    width: 4vw;
+  }
+  .image-22{
+    margin-left: 2%;
+    width: 5vw;
+  }
    .button{
      margin-left: 10%;
    }
@@ -3066,15 +3086,23 @@ textarea.w-input, textarea.w-select {
  @media screen and (max-width: 400px) {
 
    .image-2{
-     margin-left: 10%;
-     width: 6vw;
-   }
+    margin-left: 11%;
+    width: 3vw;
+  }
+  .image-22{
+    margin-left: 1%;
+    width: 4vw;
+  }
    .button{
      margin-left: 12%;
    }
    .home-button{
      margin-left: -4rem;
    }
+     .project-button{
+      font-size: 0.5rem;
+      margin-left: 12%;
+    }
    .image{
      margin-left: -4%;
      width: 30%;
@@ -3141,11 +3169,14 @@ textarea.w-input, textarea.w-select {
      margin-left: -6%;
      width: 5%;
    }
-   .image-2{
-     margin-left: 10%;
-     width: 6vw;
-   }
-
+  .image-2{
+    margin-left: 11%;
+    width: 3vw;
+  }
+  .image-22{
+    margin-left: 0.5%;
+    width: 4vw;
+  }
    .form-block{
      margin-left: 25%;
    }
