--- a/Contact/thankyou.css
+++ b/Contact/thankyou.css
@@ -2402,10 +2402,18 @@ html {
     opacity: 1;
   }
   
+ 
   .image-2 {
     margin-top: 1px;
-    margin-left: 128px;
+    margin-left: 78px;
   }
+
+  
+  .image-22 {
+    margin-top: 1px;
+    margin-left: 20px;
+  }
+  
   
   .project-button {
     opacity: .75;
@@ -3071,6 +3079,11 @@ html {
        width: -7%;
        margin-left: 5%;
      }
+     .image-22{
+       
+      width: -7%;
+      
+    }
    }
  
    @media screen and (max-width: 1030px) {
@@ -3282,18 +3295,27 @@ html {
        margin-left: -7%;
      }
      .image-2{
-       margin-left: 7%;
-       width: 12vw;
-     
-     }
+      margin-left: 8%;
+      width: 4vw;
+    
+    }
+    .image-22{
+      margin-left: 1%;
+      width: 6vw;
+    
+    }
    }
  
    @media screen and (max-width: 500px) {
  
-     .image-2{
-       margin-left: 8%;
-       width: 10vw;
-     }
+    .image-2{
+      margin-left: 10%;
+      width: 4vw;
+    }
+    .image-22{
+      margin-left: 2%;
+      width: 5vw;
+    }
      .button{
        margin-left: 10%;
      }
@@ -3319,16 +3341,24 @@ html {
  
    @media screen and (max-width: 400px) {
  
-     .image-2{
-       margin-left: 10%;
-       width: 6vw;
-     }
+    .image-2{
+      margin-left: 11%;
+      width: 3vw;
+    }
+    .image-22{
+      margin-left: 1%;
+      width: 4vw;
+    }
      .button{
        margin-left: 12%;
      }
      .home-button{
        margin-left: -4rem;
      }
+     .project-button{
+      font-size: 0.5rem;
+      margin-left: 12%;
+    }
      .image{
        margin-left: -4%;
        width: 30%;
@@ -3378,9 +3408,14 @@ html {
        width: 5%;
      }
      .image-2{
-       margin-left: 10%;
-       width: 6vw;
-     }
+      margin-left: 11%;
+      width: 3vw;
+    }
+    .image-22{
+      margin-left: 0.5%;
+      width: 4vw;
+    }
+
  
      .form-block{
        margin-left: 25%;
