--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -2404,7 +2404,13 @@ html {
   
   .image-2 {
     margin-top: 1px;
-    margin-left: 128px;
+    margin-left: 78px;
+  }
+
+  
+  .image-22 {
+    margin-top: 1px;
+    margin-left: 20px;
   }
   
   .project-button {
@@ -2801,6 +2807,11 @@ html {
       width: -7%;
       margin-left: 5%;
     }
+    .image-2{
+      
+      width: -7%;
+      
+    }
   }
 
   @media screen and (max-width: 1030px) {
@@ -2914,7 +2925,7 @@ html {
       margin-left: -5%;
     }
     .image-2{
-      margin-left: 4%;
+      margin-left: 8%;
     }
   }
 
@@ -2943,7 +2954,7 @@ html {
       margin-left: -5%;
     }
     .image-2{
-      margin-left: 4%;
+      margin-left: 8%;
     }
   }
 
@@ -2972,7 +2983,7 @@ html {
       margin-left: -7%;
     }
     .image-2{
-      margin-left: 5%;
+      margin-left: 6%;
     
     }
   }
@@ -3003,8 +3014,13 @@ html {
       margin-left: -7%;
     }
     .image-2{
-      margin-left: 7%;
-      width: 12vw;
+      margin-left: 8%;
+      width: 4vw;
+    
+    }
+    .image-22{
+      margin-left: 1%;
+      width: 6vw;
     
     }
   }
@@ -3012,8 +3028,12 @@ html {
   @media screen and (max-width: 500px) {
 
     .image-2{
-      margin-left: 8%;
-      width: 10vw;
+      margin-left: 10%;
+      width: 4vw;
+    }
+    .image-22{
+      margin-left: 2%;
+      width: 5vw;
     }
     .button{
       margin-left: 10%;
@@ -3040,8 +3060,12 @@ html {
   @media screen and (max-width: 400px) {
 
     .image-2{
-      margin-left: 10%;
-      width: 6vw;
+      margin-left: 11%;
+      width: 3vw;
+    }
+    .image-22{
+      margin-left: 1%;
+      width: 4vw;
     }
     .button{
       margin-left: 12%;
@@ -3049,6 +3073,11 @@ html {
     .home-button{
       margin-left: -4rem;
     }
+    .project-button{
+      font-size: 0.5rem;
+      margin-left: 12%;
+    }
+    
     .image{
       margin-left: -4%;
       width: 30%;
@@ -3092,8 +3121,12 @@ html {
       width: 5%;
     }
     .image-2{
-      margin-left: 10%;
-      width: 6vw;
+      margin-left: 11%;
+      width: 3vw;
+    }
+    .image-22{
+      margin-left: 0.5%;
+      width: 4vw;
     }
 
     .form-block{
